log tests with coverage flag in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t sasquatch06/frontend-dev -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true sasquatch06/frontend-dev npm run test
+  - docker run -e CI=true sasquatch06/frontend-dev npm run test -- --coverage
